# sabiden

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-merge.yml  ci.yml  pwa-deploy.yml  release.yml  workers-ci.yml
deploy/dhcp/: README.md  dhclient.conf.example  dhcpcd.conf.example
deploy/dhcp/dhclient-exit-hooks.d/: sabiden
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml
deploy/systemd/: README.md  sabiden.env.example  sabiden.service
deploy/systemd/sysusers.d/: sabiden.conf
docs/: ARCHITECTURE.md  CLOUDFLARE.md  INSTALL.md  OBSERVABILITY.md  architecture.md  asterisk-ngn-invite-spec.md  asterisk-real-invite.md  refactor-plan.md  test-strategy.md
examples/: transcode_bench.rs
frontend/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: sw.js
frontend/public/icons/: README.md
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: CallScreen.tsx  Dialer.tsx  Login.tsx
frontend/src/lib/: push.ts  signaling.test.ts  signaling.ts  storage.test.ts  storage.ts  webrtc.test.ts  webrtc.ts
observability/grafana/: sabiden-dashboard.json
observability/prometheus/: scrape-config.example.yml
scripts/: dev-token.sh
src/: lib.rs  main.rs  testing.rs
src/call/: bridge.rs  carrier_retry.rs  codec_pipeline.rs  dtmf.rs  e2e_harness_tests.rs  inbound_e2e_tests.rs  intercom.rs  manager.rs  message_log.rs  mod.rs  orchestrator.rs  rate_limiter.rs  recording.rs  routing.rs  transcoder.rs
src/call/voicemail/: mod.rs  wav.rs
src/config/: mod.rs
src/dhcp/: mod.rs
src/health/: mod.rs
src/observability/: call_log.rs  mod.rs  transcription.rs
src/rtp/: jitter.rs  mod.rs  packet.rs  rtcp.rs  session.rs
src/rtp/codec/: mod.rs  opus.rs  resample.rs
src/sdp/: builder.rs  mod.rs  negotiation.rs  parser.rs
src/sip/: addr.rs  auth.rs  dialog.rs  message.rs  mod.rs  register.rs  registrar.rs  transaction.rs  uac.rs  uas.rs  utils.rs
src/webrtc/: auth.rs  mod.rs  peer.rs  push.rs  signaling.rs  str0m_session.rs
src/webrtc/testdata/: firefox_offer.sdp
tests/: intercom_integration.rs
tests/e2e_call_sequence/: leg_inviter.rs  mock_extension_ua.rs  mock_ngn_carrier.rs  mod.rs  sabiden_harness.rs  scenarios.rs
workers/: .dev.vars.example  package-lock.json  package.json  signaling-proxy.test.ts  signaling-proxy.ts  tsconfig.json  vitest.config.ts  wrangler.toml
