[package]
name = "sabiden"
version = "0.1.0"
edition = "2021"
description = "NTT ひかり電話 SIP client - DIY implementation in Rust"
license = "MIT"

[[bin]]
name = "sabiden"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
rand = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.21"
