[package]
name = "sabiden"
version = "0.1.0"
edition = "2021"
description = "NTT ひかり電話 SIP client - DIY implementation in Rust"
license = "MIT"

[[bin]]
name = "sabiden"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
rand = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2"
hex = "0.4"
# Opus コーデック (libopus FFI)。ビルドには libopus-dev (Linux) が必要
opus = "0.3"
# 高品質リサンプラ (8kHz <-> 48kHz)
rubato = "0.16"
# 実 WebRTC (ICE / DTLS-SRTP / RTP) 終端 (Issue #28)。
# Sans-IO 設計のため tokio との統合は run loop 側で行う。
# 既定の `aws-lc-rs` バックエンドは crypto 依存が大きいので OpenSSL に切り替える
# (Linux ではほぼ確実に利用可能で、CI イメージにも入っている)。
str0m = { version = "0.19", default-features = false, features = ["openssl"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.21"
