[package]
name = "sabiden"
version = "0.1.0"
edition = "2021"
description = "NTT ひかり電話 SIP client - DIY implementation in Rust"
license = "MIT"

[[bin]]
name = "sabiden"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
rand = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2"
hex = "0.4"
# Opus コーデック (libopus FFI)。ビルドには libopus-dev (Linux) が必要
opus = "0.3"
# 高品質リサンプラ (8kHz <-> 48kHz)
rubato = "0.16"
# 実 WebRTC (ICE / DTLS-SRTP / RTP) 終端 (Issue #28)。
# Sans-IO 設計のため tokio との統合は run loop 側で行う。
# 既定の `aws-lc-rs` バックエンドは crypto 依存が大きいので OpenSSL に切り替える
# (Linux ではほぼ確実に利用可能で、CI イメージにも入っている)。
str0m = { version = "0.19", default-features = false, features = ["openssl"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
# Web Push Protocol (RFC 8030 / RFC 8291 / RFC 8292 VAPID) for PWA push notifications.
web-push = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.21"

# E2E SIP testbed: NGN P-CSCF + 内線 UA mock を tokio 内で立ち上げ、
# sabiden の通話シーケンス全体を 1 test で検証する (CLAUDE.md §7 / docs/test-strategy.md §3)。
[[test]]
name = "e2e_call_sequence"
path = "tests/e2e_call_sequence/mod.rs"

# Issue #313 / PR #314 review fix: 内線間 direct dial (intercom) の
# integration test。 production の `UasEventHandler` を組み立て、
# `set_intercom_service` で結線した状態で `handle_pwa_outbound_offer`
# (= PwaOutboundHandler trait) を呼び、 dispatcher が NGN 経路を経由せず
# 内線間 dial に振り分けることを実通信フローで検証する。
[[test]]
name = "intercom_integration"
path = "tests/intercom_integration.rs"
